# Logger

./: .gitignore  CMakeLists.txt  Main.qml  README.md
src/: CMakeLists.txt  Main.cpp  Main.qml
src/Models/: CMakeLists.txt
src/Models/FileReader/: CMakeLists.txt  FileReaderModel.cpp  FileReaderModel.h
src/Models/OpenedFiles/: CMakeLists.txt  OpenedFilesModel.cpp  OpenedFilesModel.h
src/Models/Settings/: CMakeLists.txt  SettingsModel.cpp  SettingsModel.h
src/Ui/Components/: CMakeLists.txt  Checkbox.qml  ListViewEnhanced.qml  TextView.qml  TextViewDelegate.qml  TextViewToolbar.qml
src/Ui/MainView/: CMakeLists.txt  FileSelectionMenu.qml  MainView.qml  NoFileOpenedView.qml  OpenedFileView.qml  OpenedFilesTabBar.qml
src/Ui/Settings/: CMakeLists.txt  ColoringPatternsSetting.qml  FontSetting.qml  SettingsMainView.qml  SettingsWindow.qml
src/Utility/: CMakeLists.txt  FileSystemWatcher.cpp  FileSystemWatcher.h  Formatter.cpp  Formatter.h  Style.cpp  Style.h
src/Utility/Models/: CMakeLists.txt  ListModel.h  SelectionListModel.h
